# garth-ng

./: .markdownlint.json  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: auth-issue.yml  bug.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: authentication.md  cli.md  configuration.md  contributing.md  examples.md  getting-started.md  index.md  mcp.md  migration-v1.md
docs/api/: connect-api.md  data.md
src/garth/: __init__.py  __main__.py  auth_tokens.py  cli.py  exc.py  http.py  oauth.py  telemetry.py  version.py
src/garth/cli/: __init__.py  _helpers.py  users.py
src/garth/data/: __init__.py  _base.py  activity.py  blood_pressure.py  daily_sleep_data.py  daily_summary.py  fitness_stats.py  nutrition.py  personal_record.py  sleep.py  weight.py  weight_goal.py  wellness_goals.py
src/garth/fit/: __init__.py  body_composition.py
src/garth/sso/: __init__.py  state.py  strategy.py  widget_strategy.py
src/garth/stats/: hydration.py
src/garth/users/: profile.py  settings.py
tests/: conftest.py  fixture_helpers.py  helpers.py  test_auth_tokens.py  test_cli.py  test_exc.py  test_http.py  test_oauth.py  test_sso_init.py  test_telemetry.py  test_users.py  test_widget_strategy.py
tests/data/: test_activity.py  test_activity_sub_endpoints.py  test_blood_pressure.py  test_body_battery_data.py  test_daily_sleep_data.py  test_daily_summary.py  test_daily_summary_extensions.py  test_fitness_stats.py  test_fitness_stats_metrics.py  test_garmin_scores.py  test_heart_rate.py  test_hrv_data.py  test_morning_training_readiness.py  test_nutrition.py  test_personal_record.py  test_sleep_create.py  test_sleep_data.py  test_training_readiness.py  test_weight_data.py  test_weight_goal.py  test_weight_latest.py  test_wellness_goals.py
tests/data/cassettes/: test_weight_create.yaml
tests/data/fixtures/: activity_details.json  activity_exercise_sets.json  activity_map_details.json  activity_rounds.json  bloodpressure_categories.json  bloodpressure_get.json  fitness_stats_available_metrics.json  (+9 more)
tests/stats/: test_hrv.py  test_hydration.py  test_hydration_extensions.py  test_intensity_minutes.py  test_sleep_stats.py  test_steps.py  test_stress.py  test_training_status.py
(+29 files in other folders)
