[project]
name = "garth-ng"
version = "1.0.0-alpha.2"
description = "Garmin SSO auth + Connect Python client (maintained fork of matin/garth)"
authors = [
    { name = "CyberFossa", email = "cyberfossadev@proton.me" },
]
dependencies = [
    "curl_cffi>=0.7,<1.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "logfire>=2.11,<5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]
keywords = [
    "garmin",
    "garth",
    "garmin-connect",
    "oauth",
    "python",
    "fork",
    "maintained",
]

[project.urls]
"Homepage" = "https://github.com/cyberfossa/garth-ng"
"Repository" = "https://github.com/cyberfossa/garth-ng"
"Issues" = "https://github.com/cyberfossa/garth-ng/issues"
"Changelog" = "https://github.com/cyberfossa/garth-ng/releases"

[project.optional-dependencies]
docs = [
    "zensical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garth"]

[tool.pytest.ini_options]
addopts = "--ignore=__pypackages__ --ignore-glob=*.yaml"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ipython",
    "ipdb",
    "ipykernel",
    "pandas",
    "matplotlib",
]
linting = [
    "ruff",
    "ty",
]
testing = [
    "coverage",
    "freezegun",
    "pytest",
    "pyyaml>=6.0",
    "logfire>=2.11,<5.0",
]

[tool.ruff.lint.isort]
known-first-party = ["garth"]
combine-as-imports = true
lines-after-imports = 2

[project.scripts]
garth = "garth.cli:main"
